--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -45,4 +45,7 @@ security:
 
     access_control:
         - { path: ^/login$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
+        - { path: ^/register$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
+        - { path: ^/, roles: ["IS_AUTHENTICATED_FULLY"] }
         - { path: ^/shout, roles: ["IS_AUTHENTICATED_FULLY"] }
+
