--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -47,5 +47,6 @@ security:
         - { path: ^/login$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
         - { path: ^/register$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
         - { path: ^/, roles: ["IS_AUTHENTICATED_FULLY"] }
+#        - { path: ^/admin, roles: ["ROLE_ADMIN"] }
         - { path: ^/shout, roles: ["IS_AUTHENTICATED_FULLY"] }
 
