--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -29,6 +29,11 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    app.top_shouts:
+        class: 'AppBundle\Service\TopShouts'
+        public: true
+        arguments: ["@doctrine.orm.entity_manager"]
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
