initial landing page

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -46,6 +46,7 @@ security:
     access_control:
         - { path: ^/login$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
         - { path: ^/register$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
+        - { path: ^/$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
         - { path: ^/, roles: ["IS_AUTHENTICATED_FULLY"] }
 #        - { path: ^/admin, roles: ["ROLE_ADMIN"] }
         - { path: ^/shout, roles: ["IS_AUTHENTICATED_FULLY"] }
