--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -48,7 +48,7 @@ security:
         - { path: ^/register$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
         - { path: ^/check-email$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
         - { path: ^/$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
-        - { path: ^/, roles: ["IS_AUTHENTICATED_FULLY"] }
-#        - { path: ^/admin, roles: ["ROLE_ADMIN"] }
+#        - { path: ^/, roles: ["IS_AUTHENTICATED_FULLY"] }
+        - { path: ^/admin, roles: ["ROLE_ADMIN"] }
         - { path: ^/shout, roles: ["IS_AUTHENTICATED_FULLY"] }
 
