initial forgot password functionality

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -47,6 +47,7 @@ security:
         - { path: ^/login$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
         - { path: ^/register$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
         - { path: ^/check-email$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
+        - { path: ^/forgot-password$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
         - { path: ^/$, roles: ["IS_AUTHENTICATED_ANONYMOUSLY"] }
 #        - { path: ^/, roles: ["IS_AUTHENTICATED_FULLY"] }
         - { path: ^/admin, roles: ["ROLE_ADMIN"] }
