--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,8 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    app.sender_email: contactshoutee@gmail.com
+    app.sender_name: Team Shout
 
 framework:
     #esi: ~
