--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "erusev/parsedown": "^1.6",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.6",
         "mofodojodino/profanity-filter": "^1.3",
